--- a/river_map.ipynb
+++ b/river_map.ipynb
@@ -19,7 +19,7 @@
     "### Data source\n",
     "\n",
     "\n",
-    "* Data can be downloade from FAO United Nations can get ESRI shape files in a zip file for all continents. \n",
+    "* Data can be downloaded from FAO United Nations, You can get ESRI shape files in a .zip file for all continents. \n",
     "Link: https://data.apps.fao.org/catalog/organization/fao-aquastat?q=rivers&sort=score+desc%2C+metadata_modified+desc\n",
     "\n",
     "\n",
