--- a/river_map.ipynb
+++ b/river_map.ipynb
@@ -318,27 +318,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def plot_riverMap(gdf,cmap):\n",
+    "def plot_riverMap(gdf,cmap,save_name):\n",
     "    \"\"\"\n",
     "    gdf = geo dataframe with geometry\n",
+    "    cmap = color map\n",
+    "    save_name = name for image eg: image_name.png \n",
     "    \"\"\"\n",
     "    #converting the Strahler index into line-width values\n",
     "    gdf['width'] = 10 - gdf.A_Strahler\n",
     "    gdf['width'] = gdf['width']/float(5)\n",
-    "    #creating a canvas in matplotlib\n",
+    "    \n",
     "    f, ax = plt.subplots(1,1,figsize=(15,15))\n",
+    "\n",
     "    #doing the plotting\n",
     "    gdf.plot( column = 'A_Strahler',ax=ax, linewidth = gdf['width'], cmap = cmap)#\n",
+    "\n",
     "    #editing the plot\n",
     "    f.patch.set_facecolor('k')  # Set figure background color to black\n",
     "    ax.set_facecolor('k')       # Set axes background color to black\n",
     "    ax.axis('off')              # Remove the axis\n",
     "\n",
-    "    #plt.savefig('rivers_S_and_SE_asia.png', dpi = 200, bbox_inches = 'tight')\n"
+    "    plt.savefig( save_name, dpi = 200, bbox_inches = 'tight')\n"
    ]
   },
   {
@@ -353,7 +357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -368,7 +372,7 @@
     }
    ],
    "source": [
-    "plot_riverMap(gdf,'YlGnBu')"
+    "plot_riverMap(gdf,'YlGnBu','World_riverDrain.png')"
    ]
   },
   {
